--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #temporary data storage
-spring.datasource.url = jdbc:h2:file:~/testdb/greetings 
+spring.datasource.url = jdbc:h2:file:~/testdb
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.username=sa
-# spring.datasource.password=
+spring.datasource.username=sa
+spring.datasource.password=
 # Enabling H2 Console
 spring.h2.console.enabled=true
 # Custom H2 Console URL
